# pytest_submodule

./: CHANGELOG.md  MANIFEST.in  README.md  pytest.ini  setup.cfg  setup.py
docs/source/: api.rst  conf.py  index.rst  quickstart.rst
src/pytest_submodule/: _version.py
